<resources>
    <string name="app_name">Maneja tu Finca App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu Principal</string>
    <string name="menu_gallery">Eventos y Tareas</string>
    <string name="menu_slideshow">Trabajadores</string>
    <string name="menu_tools">Perfil</string>
    <string name="menu_share">Contactenos</string>
    <string name="menu_send">Cerrar Cesion</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Finca</string>
    <string name="title_dashboard">Animales</string>
    <string name="title_notifications">Produccion</string>
    <string name="title_eventos">Eventos</string>

    <string name="title_activity_main3">Main3Activity</string>
    <string name="loader_text">Cargando...</string>
    <string name="tvCorreo">Correo Electronico</string>
    <string name="tvPass">Contraseña</string>
    <string name="tvAcede">Accede a tu Cuenta</string>
    <string name="Login">Login</string>
    <string name="sign_up"><u>Registrarse</u></string>
    <string name="tvConfPass">Confirmar Contraseña</string>
    <string name="Register">Registrarse</string>
    <string name="iLogout">Logout</string>
    <string name="comunicacion">Comunicacion</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="añadiranimal">AÑADIR\nANIMAL </string>
    <string name="añadirtrabajador">AÑADIR \nTRABAJADOR</string>
    <string name="añadirevento">AÑADIR \nTAREA/EVENTO</string>
    <string name="añadirveterianria">AÑADIR\nREVISION\nVETERIANARIA</string>
    <string name="RegAnimal">Cree el registro de sus\nanimales para manejar\nsu finca de la manera adecuado</string>
    <string name="title_activity_trabajadores">Trabajadores</string>
    <string name="contactar">Desarrolado por:\n\nJuan Camilo Martinez Ortega\nEstudiante de Ingenieria Electronica\nUniversidad de Antioqia\njuan.martinez6@udea.edu.co\n\n\nJuan Felipe Urbano Ordoñez\nEstudiante de Ingenieria Electronica\nUniversidad de Antioqia\njuan.urbano@udea.edu.co</string>
    <string name="nombre">Nombre</string>
    <string name="ocupacion">Ocupacion</string>
    <string name="agregar">Agregar</string>
    <string name="nomanimal">Nombre del animal</string>
    <string name="numanimal">Numero del animal</string>
    <string name="sexoMacho">Macho</string>
    <string name="sexoHembra">Hembra</string>
    <string name="numero">Numero</string>
    <string name="edad">Edad</string>
    <string name="peso">Peso</string>
    <string name="madre">Madre</string>
    <string name="padre">Padre</string>
    <string name="nomPadre">Nombre del padre</string>
    <string name="nomMadre">Nombre del Madre</string>
    <string name="fechanot">\--/--/----</string>
    <string name="Menu">Menu</string>
    <string name="title_activity_Perfil">Perfil</string>
    <string name="title_activity_addanimal">Añadir Animal</string>
    <string name="title_activity_addtrabajador">Añadir Trabajador</string>
    <string name="Guardar">Guardar</string>


</resources>
