<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_home"
                android:icon="@mipmap/home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@mipmap/tareas"
                android:title="@string/menu_gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@mipmap/trabajador"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@mipmap/perfil"
                android:title="@string/menu_tools"/>
    </group>

    <item android:title="@string/comunicacion">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@mipmap/call_center"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/logout_icon2"
                    android:title="@string/menu_send"/>
        </menu>
    </item>
</menu>
