<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="2dp"
        >



    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="160dp">

        <ImageView
                android:id="@+id/tfotoanimal"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:src="@drawable/vacaprofile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tNombreani"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/nombre"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.18"
                app:layout_constraintStart_toEndOf="@+id/tfotoanimal"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tnumero"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginBottom="120dp"
                android:text="@string/numero"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.745"
                app:layout_constraintStart_toEndOf="@+id/tfotoanimal" />

        <TextView
                android:id="@+id/tSexo"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginBottom="88dp"
                android:text="@string/sexoMacho"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.712"
                app:layout_constraintStart_toEndOf="@+id/tfotoanimal" />

        <TextView
                android:id="@+id/tedad"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginBottom="16dp"
                android:text="@string/edad"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.139"
                app:layout_constraintStart_toEndOf="@+id/tfotoanimal" />

        <TextView
                android:id="@+id/tpeso"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginBottom="48dp"
                android:text="@string/peso"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.139"
                app:layout_constraintStart_toEndOf="@+id/tfotoanimal" />

        <TextView
                android:id="@+id/tmadre"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginBottom="16dp"
                android:text="@string/madre"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.643"
                app:layout_constraintStart_toEndOf="@+id/tfotoanimal" />

        <TextView
                android:id="@+id/tpadre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="@string/padre"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.634"
                app:layout_constraintStart_toEndOf="@+id/tfotoanimal" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>