<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/greenca">

    <ImageView android:layout_width="168dp"
               android:layout_height="115dp"
               android:src="@drawable/simplecow"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
               app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView2"
               app:layout_constraintHorizontal_bias="0.497"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/tvAcede"
              android:id="@+id/textView" android:layout_marginTop="20dp"
              app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              android:textSize="25sp"
              android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="293dp"
            android:layout_height="267dp"
            android:orientation="vertical"
            android:background="@color/lightgray"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.536" android:id="@+id/constraintLayout2">

        <EditText android:layout_width="240dp"
                  android:layout_height="50dp"
                  android:id="@+id/etEmaill"
                  android:inputType="textEmailAddress"
                  android:layout_marginTop="24dp"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp"
                  android:hint="@string/tvCorreo"
                  android:background="@color/whitesmoke"/>

        <EditText android:layout_width="240dp"
                  android:layout_height="50dp"
                  android:id="@+id/etPassl"
                  android:inputType="numberPassword"
                  android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/etEmaill" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp"
                  android:hint="@string/tvPass"
                  android:background="@color/whitesmoke"/>


        <Button android:layout_width="240dp"
                android:layout_height="50dp"
                android:id="@+id/btnLogin"
                android:hint="@string/Login"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/etPassl" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:background="@color/greenca"/>

        <TextView android:layout_width="73dp"
                  android:layout_height="24dp"
                  android:id="@+id/tvsignup"
                  android:hint="@string/sign_up"
                  android:textSize="15sp"
                  android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/btnLogin" android:layout_marginEnd="8dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                  app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.834"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>