<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_margin="8dp"
        tools:context=".HomeFragment">

   <ImageView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           android:src="@drawable/finca"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tinfo"
           android:textSize="18sp"
            android:hint="asdasdasd\nasdadasd\nasdasd\nasdasdasd"
            />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ddatoss"
            android:paddingLeft="4dp"
            android:paddingTop="5dp"
            android:paddingRight="4dp"
            android:paddingBottom="5dp"
            >

        <TextView
                android:id="@+id/tAñAnimal"
                android:layout_width="155dp"
                android:layout_height="130dp"
                android:background="@color/redd"
                android:drawableTop="@drawable/add_foreground"
                android:text="@string/añadiranimal"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <TextView
                android:id="@+id/tAñTrabajador"
                android:layout_width="155dp"
                android:layout_height="130dp"
                android:background="@color/orange"
                android:drawableTop="@drawable/add_foreground"
                android:text="@string/añadirtrabajador"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tAñveterianrio"
                android:layout_width="155dp"
                android:layout_height="135dp"
                android:background="@color/yellow"
                android:drawableTop="@drawable/add_foreground"
                android:text="@string/añadirveterianria"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        <TextView
                android:id="@+id/tAñevento"
                android:layout_width="155dp"
                android:layout_height="135dp"
                android:background="@color/royalblue"
                android:drawableTop="@drawable/add_foreground"
                android:text="@string/añadirevento"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>