<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/balnca"
        tools:context=".RegistroActivity">

    <ImageView android:layout_width="180dp"
            android:layout_height="140dp"
            android:src="@drawable/sign_ip_icon"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.497"/>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@color/balnca"
            android:id="@+id/etEmaill2"
            app:passwordToggleEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.496">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvCorreo"
                android:id="@+id/etCorreo"
                android:autofillHints="@string/tvCorreo"

                android:inputType="textEmailAddress"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@color/balnca"
            android:id="@+id/etPassl"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etEmaill2">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvPass"
                android:id="@+id/etPass"

                android:inputType="textPassword"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@color/balnca"
            android:id="@+id/etcCnfirPass1"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassl" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tvConfPass"
                android:id="@+id/etcCnfirPass"

                android:inputType="textPassword"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/sign_up"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:id="@+id/btnsignup"
            android:background="@color/greenca"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etcCnfirPass1"/>

</androidx.constraintlayout.widget.ConstraintLayout>